enhance menu to display path separately. this breaks the matcher which isn't expecting separate paths. fix coming up soon

--- a/plugins/supported/command_line/resources/cli.css
+++ b/plugins/supported/command_line/resources/cli.css
@@ -72,9 +72,10 @@ div.cmd_line div.sc-view.sc-gray-border { border: 0; }
 div.cmd_line div.cmd_completion { font-family: Arial,sans-serif; color: #443;
   font-size: 16px; font-weight: bold;
 }
-div.cmd_line div.cmd_completion span.cmd_existing { color: rgb(27,22,19);
-  text-shadow: none;
-}
+.cmd_existing { color: rgb(27,22,19); text-shadow: none; }
+.cmd_extension { margin-left:30px; }
+.cmd_extension:before { content:"\2794\00a0 "; }
+
 div.cmd_line span.cmd_char { letter-spacing: -0.2ex; font-weight: bold; }
 
 /* Command Output */
